Modernize legacy Java usage (mostly things possible since Java 7), and some other code cleanup, mostly freemarker.cache. Also applied standard format on changed  fielsm so they won't keep changing at functional changes.